[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemy/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy/Boss.gd" type="Script" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="FontFile" id=3]
[ext_resource path="res://materialBundle/bundle1/ep_15.png" type="Texture2D" id=4]
[ext_resource path="res://music/bgm_boss.wav" type="AudioStream" id=5]
[ext_resource path="res://bullet/BulletStrategy.tscn" type="PackedScene" id=6]

[sub_resource type="FontFile" id=1]
font_data = ExtResource( 3 )

[node name="Boss" groups=["boss"] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" parent="." index="2" groups=["boss"]]
polygon = PackedVector2Array( -52.1603, 39.8394, -20.0617, 63.7431, 21.0648, 63.7431, 55.1696, 39.8394, 87.2683, 19.9197, 87.2683, -9.95986, 57.1758, -17.9278, 40.1233, -41.8314, 37.1141, -63.7431, 13.0401, -69.719, -13.0401, -69.719, -35.1079, -63.7431, -37.1141, -42.8274, -51.1573, -22.9077, -87.2683, -9.95986, -86.2652, 20.9157 )

[node name="Label" type="Label" parent="." index="3"]
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 34.0
theme_override_fonts/font = SubResource( 1 )
text = "Boss"
align = 1

[node name="BossBgmMusic" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 5 )
autoplay = true

[node name="BulletStrategy" parent="." index="7" instance=ExtResource( 6 )]

[connection signal="area_entered" from="." to="." method="_on_Boss_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Boss_body_entered"]
